--- a/example/LambdaNative.Example.csproj
+++ b/example/LambdaNative.Example.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.5.0" />
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="1.0.0-alpha-*" />
   </ItemGroup>
 
   <ItemGroup>
