Fixed docker build, not copy file to container

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -1,8 +1,7 @@
 # docker build -t lambdanative .
-# docker run --rm -v $(pwd)/publish:/app/out lambdanative
+# docker run --rm -v $(pwd):/app lambdanative
 
-FROM microsoft/dotnet:2.1-sdk AS publish
+FROM microsoft/dotnet:2.2-sdk AS build-env
 WORKDIR /app
-ADD . ./
 RUN apt-get update && apt-get install clang-3.9 libcurl4-openssl-dev zlib1g-dev libkrb5-dev -y
-ENTRYPOINT ["dotnet", "publish", "-c", "Release", "-o", "out", "-r", "linux-x64"]
+ENTRYPOINT ["dotnet", "publish", "-c", "Release", "-r", "linux-x64"]
