--- a/src/LambdaNative.csproj
+++ b/src/LambdaNative.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyVersion>1.0.2.0</AssemblyVersion>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <VersionPrefix>1.0.2</VersionPrefix>
-    <AssemblyName>iFew.LambdaNative</AssemblyName>
+    <VersionPrefix>1.0.0</VersionPrefix>
+    <AssemblyName>LambdaNativeCustom</AssemblyName>
     <Authors>iFew</Authors>
     <Description>Make .NET AWS Lambda functions start 10x faster using LambdaNative and custom for solved AWS Lambda connection timeout (Based on LambdaNative by zaccharles)</Description>
-    <PackageId>iFew.LambdaNative</PackageId>
+    <PackageId>LambdaNativeCustom</PackageId>
     <PackageTags>aws,lambda,native,performance</PackageTags>
     <PackageProjectUrl>https://github.com/ifew/lambda-native</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/ifew/lambda-native/master/assets/logo.png</PackageIconUrl>
